Issue #2839515 by AdamPS, willzyx, rpsu: Remove Kint module and create a kint dumper plugin in devel

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,12 @@
   "require": {
     "symfony/var-dumper": "~2.7|^3|^4"
   },
-  "suggest": {},
+  "suggest": {
+    "kint-php/kint": "Kint provides an informative display of arrays/objects. Useful for debugging and developing."
+  },
+  "conflict": {
+    "kint-php/kint": "<3"
+  },
   "extra": {
     "drush": {
       "services": {
