--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,7 @@
   "require": {
     "symfony/var-dumper": "~2.7|^3|^4"
   },
-  "suggest": {
-    "kint-php/kint": "Kint provides an informative display of arrays/objects. Useful for debugging and developing."
-  },
-  "conflict": {
-    "kint-php/kint": "<3"
-  },
+  "suggest": {},
   "extra": {
     "drush": {
       "services": {
