--- a/devel.routing.yml
+++ b/devel.routing.yml
@@ -266,3 +266,13 @@ devel.entity_info_page.detail:
     _admin_route: TRUE
   requirements:
     _permission: 'access devel information'
+
+devel.entity_info_page.fields:
+  path: '/devel/entity/fields/{entity_type_id}'
+  defaults:
+    _controller: '\Drupal\devel\Controller\EntityTypeInfoController::entityTypeFields'
+    _title: 'Entity fields @entity_type_id'
+  options:
+    _admin_route: TRUE
+  requirements:
+    _permission: 'access devel information'
