--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -15,6 +15,7 @@
   <arg name="extensions" value="inc,install,module,php,profile,test,theme,yml"/>
 
   <!-- ignore all files that match these patterns -->
+  <exclude-pattern>vendor</exclude-pattern>
   <exclude-pattern>_ignore*</exclude-pattern>
   <exclude-pattern>*.patch</exclude-pattern>
 
