Issue #3081785 by jonathan1055: Ignore interdif files in phpcs.xml.dist

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -18,5 +18,6 @@
   <exclude-pattern>vendor</exclude-pattern>
   <exclude-pattern>_ignore*</exclude-pattern>
   <exclude-pattern>*.patch</exclude-pattern>
+  <exclude-pattern>*interdif*</exclude-pattern>
 
 </ruleset>
