Issue #3118857 by Berdir, jonathan1055, vipin.mittal18, DamienMcKenna: Add core_version_requirement: ^8.8 || ^9 for Devel 3.x and php7.1 for Webprofiler sub-module

--- a/devel_generate/devel_generate.info.yml
+++ b/devel_generate/devel_generate.info.yml
@@ -2,6 +2,6 @@ type: module
 name: 'Devel Generate'
 description: 'Generate dummy users, nodes, menus, taxonomy terms...'
 package: Development
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 tags:
  - developer
