--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ language: php
 sudo: true
 
 php:
-  - 5.6
-  - 7.0
+  - 7.1
   - 7.3
 
 services:
@@ -16,21 +15,16 @@ env:
   global:
     - MODULE=devel
   matrix:
-    - DRUPAL_CORE=8.7.x
     - DRUPAL_CORE=8.8.x
     - DRUPAL_CORE=8.9.x
+    - DRUPAL_CORE=9.0.x
 
 matrix:
   fast_finish: true
-  # Start using PHP7.3 with Core 8.8 not before.
-  # Core 8.8+ no longer supports PHP5.
+  # PHP7.1 is not supported from Core 9.0 onwards.
   exclude:
-    - php: 7.3
-      env: DRUPAL_CORE=8.7.x
-    - php: 5.6
-      env: DRUPAL_CORE=8.8.x
-    - php: 5.6
-      env: DRUPAL_CORE=8.9.x
+    - php: 7.1
+      env: DRUPAL_CORE=9.0.x
 
 # Be sure to cache composer downloads.
 cache:
@@ -67,11 +61,6 @@ before_script:
 
   # Run composer self-update and install.
   - travis_retry composer self-update && travis_retry composer install
-  # If running Core 8.6 or 8.7 the following script will upgrade to phpunit 6
-  # which is required in PHP7. The script has now been deleted from Core 8.8.
-  - if [[ $DRUPAL_CORE == "8.6.x" || $DRUPAL_CORE == "8.7.x" ]]; then
-      travis_retry composer run-script drupal-phpunit-upgrade;
-    fi
 
   # Run composer update in the module directory in order to fetch dependencies.
   - travis_retry composer update -d $DRUPAL_ROOT/modules/$MODULE
