--- a/devel.info.yml
+++ b/devel.info.yml
@@ -2,7 +2,7 @@ type: module
 name: Devel
 description: 'Various blocks, pages, and functions for developers.'
 package: Development
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 configure: devel.admin_settings
 tags:
  - developer
