--- a/devel_generate/tests/modules/devel_generate_example/devel_generate_example.info.yml
+++ b/devel_generate/tests/modules/devel_generate_example/devel_generate_example.info.yml
@@ -2,7 +2,7 @@ name: 'Devel Generate Example'
 type: module
 description: 'Create an example of a Devel Generate plugin type for testing purposes.'
 package: Development
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 configure: admin/config/development/generate
 tags:
  - developer
