--- a/tests/modules/devel_entity_test/devel_entity_test.info.yml
+++ b/tests/modules/devel_entity_test/devel_entity_test.info.yml
@@ -3,7 +3,7 @@ type: module
 description: 'Provides entity types for Devel tests.'
 package: Testing
 version: VERSION
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 dependencies:
   - drupal:field
   - drupal:text
