--- a/webprofiler/webprofiler.info.yml
+++ b/webprofiler/webprofiler.info.yml
@@ -2,7 +2,8 @@ name: Web Profiler
 type: module
 description: 'Drupal Web Profiler.'
 package: Development
-core: 8.x
+core_version_requirement: ^8.8 || ^9
+php: 7.1
 configure: webprofiler.settings
 tags:
  - developer
