Issue #3118857 by jonathan1055: Require drush ^9.0 || ^10.0 in travis, and symfony/var-dumper ^4 || ^5 in composer.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ before_script:
   - travis_retry composer update -d $DRUPAL_ROOT/modules/$MODULE
 
   # Install drush
-  - travis_retry composer require drush/drush:^9.0
+  - travis_retry composer require drush/drush:"^9.0 || ^10.0"
 
   # Coder is already installed as part of composer install. We just need to set
   # the installed_paths to pick up the Drupal standards.
