--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
   "license": "GPL-2.0+",
   "minimum-stability": "dev",
   "require": {
-    "symfony/var-dumper": "~2.7|^3|^4"
+    "symfony/var-dumper": "^4 || ^5"
   },
   "suggest": {
     "kint-php/kint": "Kint provides an informative display of arrays/objects. Useful for debugging and developing."
