Issue #3124519 by Berdir: Class 'Doctrine\Common\Util\Debug' not found in 9.x - require doctrine/common ^2.7 in composer.json

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
   "license": "GPL-2.0+",
   "minimum-stability": "dev",
   "require": {
-    "symfony/var-dumper": "^4 || ^5"
+    "symfony/var-dumper": "^4 || ^5",
+    "doctrine/common": "^2.7"
   },
   "suggest": {
     "kint-php/kint": "Kint provides an informative display of arrays/objects. Useful for debugging and developing."
