--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ before_script:
   # Export database variable for kernel tests.
   - export SIMPLETEST_DB=mysql://root:@127.0.0.1/$MODULE
 
-  # Download Drupal 8 core from the Github mirror because it is faster.
+  # Download Drupal core from the Github mirror because it is faster.
   - travis_retry git clone --branch $DRUPAL_CORE --depth 1 https://github.com/drupal/drupal.git
   - cd drupal
   # Store the path to Drupal root.
@@ -78,8 +78,15 @@ before_script:
   # Export web server URL for browser tests.
   - export SIMPLETEST_BASE_URL=http://localhost:8888
 
+  # Interim patch for 9.0 only to avoid the Webprofiler toolbar halting the test run with 'class not found'.
+  - if [ $DRUPAL_CORE == "9.0.x" ]; then
+      cd $DRUPAL_ROOT/modules/$MODULE;
+      wget -q -O - https://www.drupal.org/files/issues/2020-04-07/3097125-33.replace-JavascriptTestBase.patch | patch -p1 --verbose;
+    fi
+
 script:
   # Run the PHPUnit tests.
+  - cd $DRUPAL_ROOT
   - ./vendor/bin/phpunit -c ./core/phpunit.xml.dist --verbose --group=devel,devel_generate,webprofiler ./modules/$MODULE
 
   # Check for coding standards. First change directory to our module.
