--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,6 +8,7 @@
   <rule ref="DrupalPractice"/>
 
   <!-- Use 's' to print the full sniff name in the report. -->
+  <!-- A '-' is prefixed to each of these, so s becomes -s, etc. -->
   <arg value="s"/>
   <arg value="-colors"/>
 
