--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,16 +13,14 @@
   <arg value="s"/>
   <arg value="-colors"/>
 
-  <!-- specify extensions to check (but this seemes to is ignored anyway) -->
-  <arg name="extensions" value="inc,install,module,php,profile,test,theme,yml"/>
-
-  <!-- ignore all files that match these patterns -->
-  <!--  The 2 lines are key to isolating just Devel files-->
-  <exclude-pattern>web</exclude-pattern>
-  <exclude-pattern>vendor</exclude-pattern>
-  <exclude-pattern>_ignore*</exclude-pattern>
-  <exclude-pattern>*.patch</exclude-pattern>
-  <exclude-pattern>*interdif*</exclude-pattern>
+  <!-- Ignore all files that match these patterns. They are matched against -->
+  <!-- the full file path and there is an implied wildcard at each end. -->
+  <!-- The first two are key to isolating just Devel files. -->
+  <exclude-pattern>devel/web/</exclude-pattern>
+  <exclude-pattern>devel/vendor/</exclude-pattern>
+  <exclude-pattern>_ignore</exclude-pattern>
+  <exclude-pattern>.patch</exclude-pattern>
+  <exclude-pattern>interdif</exclude-pattern>
 
   <!-- Example how you would disable an external rule you do not like:
   <rule ref="PEAR.Functions.ValidDefaultValue.NotAtEnd">
