--- a/composer.json
+++ b/composer.json
@@ -60,14 +60,15 @@
     "kint-php/kint": "<3"
   },
   "config": {
-  	"process-timeout": 3600
+  	"process-timeout": 36000
   },
   "scripts": {
       "si": "drush si -vvv --db-url=sqlite://sites/default/files/.sqlite testing",
       "phpcs": "phpcs -n --report-summary --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 devel.module devel.install webprofiler devel_generate src tests",
       "cbf": "phpcbf --standard=Drupal -n src tests",
       "lint": "parallel-lint src tests",
-      "runserver": "drush runserver",
+      "runserver": "drush runserver 0.0.0.0",
+      "chromedriver": "chromedriver --port=9515 --verbose --whitelisted-ips --log-path=/tmp/chromedriver.log --no-sandbox",
       "create-symlinks": "cd web/modules/devel && find ../../.. -maxdepth 1 ! -name .git ! -name web ! -name vendor -print | while read file; do ln -s $file .; done",
       "unit": "phpunit --verbose web/modules/devel",
       "test": [
