--- a/composer.json
+++ b/composer.json
@@ -2,40 +2,11 @@
   "name": "drupal/devel",
   "description": "Various blocks, pages, and functions for developers.",
   "type": "drupal-module",
-  "homepage": "http://drupal.org/project/devel",
-  "authors": [
-    {
-      "name": "Moshe Weitzman",
-      "email": "weitzman@tejasa.com",
-      "homepage": "https://github.com/weitzman",
-      "role": "Maintainer"
-    },
-    {
-      "name": "Hans Salvisberg",
-      "email": "drupal@salvisberg.com",
-      "homepage": "https://www.drupal.org/u/salvis",
-      "role": "Maintainer"
-    },
-    {
-      "name": "Luca Lusso",
-      "homepage": "https://www.drupal.org/u/lussoluca",
-      "role": "Maintainer"
-    },
-    {
-      "name": "Marco (willzyx)",
-      "homepage": "https://www.drupal.org/u/willzyx",
-      "role": "Maintainer"
-    },
-    {
-      "name": "See contributors",
-      "homepage": "https://www.drupal.org/node/3236/committers"
-    }
-  ],
   "support": {
-    "issues": "http://drupal.org/project/devel",
-    "irc": "irc://irc.freenode.org/drupal-contribute",
+    "issues": "https://gitlab.com/drupalspoons/devel/-/issues",
+    "slack": "https://drupal.slack.com/archives/C012WAW1MH6",
     "docs": "https://www.drupal.org/docs/8/modules/devel",
-    "source": "https://git.drupalcode.org/project/devel"
+    "source": "https://gitlab.com/drupalspoons/devel/-/tree/8.x-3.x"
   },
   "license": "GPL-2.0-or-later",
   "minimum-stability": "dev",
