--- a/composer.json
+++ b/composer.json
@@ -35,18 +35,12 @@
   },
     "scripts": {
         "si": "drush si -vvv --db-url=sqlite://sites/default/files/.sqlite testing",
-        "phpcs": "PWD=$(pwd) && phpcs --report-summary --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/",
-        "cbf": "phpcbf --standard=Drupal -n src tests",
+        "phpcs": "PWD=$(pwd) && phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/",
         "lint": "parallel-lint --exclude web --exclude vendor .",
         "runserver": "drush runserver 0.0.0.0",
         "chromedriver": "chromedriver --port=9515 --verbose --whitelisted-ips --log-path=/tmp/chromedriver.log --no-sandbox",
         "create-symlinks": "cd web/modules/${PWD##*/} && find ../../.. -maxdepth 1 ! -name .git ! -name web ! -name vendor -print | while read file; do ln -s $file .; done",
         "unit": "phpunit --verbose web/modules/${PWD##*/}",
-        "test": [
-            "@lint",
-            "@phpcs",
-            "@unit"
-        ],
         "post-update-cmd": [
             "DIR=${PWD##*/} && rm -rf web/modules/$DIR && mkdir -p web/modules/$DIR",
             "@create-symlinks"
