Emit HTML pages for debugging during composer unit script.

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,9 @@ yarn.lock
 /.editorconfig
 /.gitattributes
 
-#JUnit phpunit output
+#PHPUnit output
 junit.xml
+.phpunit.result.cache
 
 # Ignore local overrides.
 docker-compose.override.yml
