--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ruleset name="Module">
   <file>.</file>
-  <arg name="extensions" value="php,module,inc,install,test,profile,theme,css,info,txt,md,yml"/>
+  <arg name="extensions" value="php,module,inc,install,test,profile,theme,css"/>
   <config name="drupal_core_version" value="8"/>
 
   <!-- Initially include all Drupal and DrupalPractice sniffs. -->
