--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ruleset name="Module">
   <file>.</file>
-  <arg name="extensions" value="php,module,inc,install,test,profile,theme,css"/>
+  <arg name="extensions" value="php,module,inc,install,test,profile,theme,css,info,txt,md,yml"/>
   <config name="drupal_core_version" value="8"/>
 
   <!-- Initially include all Drupal and DrupalPractice sniffs. -->
@@ -16,12 +16,18 @@
 
   <!-- Ignore all files that match these patterns. They are matched against -->
   <!-- the full file path and there is an implied wildcard at each end. -->
+  <!-- Periods must be escaped using \. -->
   <!-- The first two are key to isolating just this project's files. -->
   <exclude-pattern>devel/web/</exclude-pattern>
   <exclude-pattern>devel/vendor/</exclude-pattern>
   <exclude-pattern>_ignore</exclude-pattern>
-  <exclude-pattern>.patch</exclude-pattern>
+  <exclude-pattern>\.patch</exclude-pattern>
   <exclude-pattern>interdif</exclude-pattern>
+
+  <rule ref="Drupal.Files.TxtFileLineLength.TooLong">
+    <!-- Exclude .md files from the line limit rule. -->
+    <exclude-pattern>\.md</exclude-pattern>
+  </rule>
 
   <!-- Example how you would disable an external rule you do not like:
   <rule ref="PEAR.Functions.ValidDefaultValue.NotAtEnd">
