--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
   	"process-timeout": 36000
   },
     "scripts": {
-        "si": "drush si -vvv --db-url=sqlite://sites/default/files/.sqlite testing",
+        "si": "drush si -v --db-url=sqlite://sites/default/files/.sqlite testing",
         "phpcs": "PWD=$(pwd) && phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/",
         "lint": "parallel-lint --exclude web --exclude vendor .",
         "runserver": "drush runserver 0.0.0.0",
