--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "doctrine/common": "^2.7"
   },
   "require-dev": {
+    "composer/installers": "^1",
     "drupal/core-composer-scaffold": "^8.8",
     "cweagans/composer-patches": "~1.0",
     "drupal/core-recommended": "^8.8",
