--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,9 @@ include:
     file: 'templates/.gitlab-ci.yml'
 
 # Projects can override anything in the included template. See https://docs.gitlab.com/ee/ci/yaml/README.html#include
-phpunit:
-  artifacts:
-    expire_in: 4 mos
+# Comment out the code below if you are copying this file to your project.
+# Add /webprofiler to ignored paths.
+code_style:
+  script:
+    - PWD=$(pwd) && vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/,$PWD/webprofiler/ --report-junit=junit.xml --report-summary --report-full
+
