--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "drupal/core-recommended": "^8.8",
     "drupal/core-dev": "^8.8",
     "drush/drush": "^10",
+    "mglaman/phpstan-drupal": "^0.12",
+    "phpstan/phpstan-deprecation-rules": "^0.12",
     "php-parallel-lint/php-parallel-lint": "^1.2",
     "zaporylie/composer-drupal-optimizations": "^1.0"
   },
@@ -42,6 +44,7 @@
         "chromedriver": "chromedriver --port=9515 --verbose --whitelisted-ips --log-path=/tmp/chromedriver.log --no-sandbox",
         "create-symlinks": "cd web/modules/${PWD##*/} && find ../../.. -maxdepth 1 ! -name .git ! -name web ! -name vendor -print | while read file; do ln -s $file .; done",
         "unit": "phpunit --verbose --printer '\\Drupal\\Tests\\Listeners\\HtmlOutputPrinter' web/modules/${PWD##*/}",
+        "phpstan": "phpstan analyse web/modules/${PWD##*/}",
         "post-update-cmd": [
             "DIR=${PWD##*/} && rm -rf web/modules/$DIR && mkdir -p web/modules/$DIR",
             "@create-symlinks"
