--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - ./:/var/www/html:cached
       - ./.docker/zz-php.ini:/usr/local/etc/php/conf.d/zz-php.ini
+#    ports:
+#      - '${WEB_PORT-8889}:8888'
 
   # More info at https://github.com/wodby/mariadb
   mariadb:
@@ -38,7 +40,7 @@ services:
     stop_grace_period: 30s
     environment:
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: devel
+      POSTGRES_DB: db
       POSTGRES_USER: root
     volumes:
       - postgres-datavolume:/var/lib/postgresql/data
