--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,20 @@
 include:
   - project: 'drupalspoons/webmasters'
     # Best practice is to pin to a tag or a SHA1. https://docs.gitlab.com/ee/ci/yaml/#includefile
-    ref: 1.6.0-rc1
+    ref: 1.6.0-rc2
+    # The template below may be inspected at https://gitlab.com/drupalspoons/webmasters/-/blob/master/templates/.gitlab-ci.yml
     file: 'templates/.gitlab-ci.yml'
 
-# Projects can override anything in the included template. See https://docs.gitlab.com/ee/ci/yaml/README.html#include
-# Comment out the code below if you are copying this file to your project.
+#
+# Projects may override anything in the template above.
+# The code below is specific to devel project. You dont need to copy it to your new project.variables:
+#
+
+# Run tests on Drupal 9 by default.
+composer:
+  variables:
+    DRUPAL_CORE_CONSTRAINT: ^9
+
 # Add /webprofiler to ignored paths.
 code_style:
   script:
