Add default DB tags.

--- a/.env.dist
+++ b/.env.dist
@@ -2,9 +2,9 @@
 # Devel. If you are just using Devel on a site, you may ignore this file
 # and docker-compose.yml.
 
-# Uncomment to change versions of php and DBs and OS
-# POSTGRES_TAG=
-# MARIADB_TAG=
+# Uncomment to change versions of php and DBs and OS.
+# POSTGRES_TAG=10.5
+# MARIADB_TAG=10.3
 # PHP_TAG=7.3-dev
 
 # Uncomment to run tests against a different DB. Defaults to mysql.
