Add eslint and stylelint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,24 @@ include:
 # The code below is specific to devel project. You dont need to copy it to your new project.
 #
 
+css_js_style:
+  stage: test
+    dependencies:
+      - composer
+    script:
+      - cd web/core && yarn add eslint stylelint
+      - composer stylelint
+      - composer eslint -- --format junit --output-file junit-eslint.xml
+    allow_failure: true
+    artifacts:
+      expose_as: junit
+      expire_in: 6 mos
+      paths:
+        #- junit-stylelint.xml
+        - junit-eslint.xml
+      reports:
+        junit: junit-eslint.xml
+
 # Run tests on Drupal 9 by default.
 composer:
   variables:
