--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,8 @@
       "chromedriver": "chromedriver --port=9515 --verbose --whitelisted-ips --log-path=/tmp/chromedriver.log --no-sandbox",
       "unit": "phpunit --verbose web/modules/custom",
       "phpstan": "phpstan analyse web/modules/custom",
+      "stylelint": "cd web/core && yarn stylelint --config ./.stylelintrc.json ../modules/custom/**/*.css",
+      "eslint": "cd web/core && yarn eslint -c ./.eslintrc.json ../modules/custom",
       "post-update-cmd": ["Spoons\\ScriptHandler::createSymlinks"]
   },
   "extra": {
