--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,17 +17,19 @@ css_js_style:
   script:
     - yarn --cwd web/core install
     - composer eslint -- --format junit --output-file junit-eslint.xml || true
-    - composer stylelint || true
+    - composer stylelint -- --color || true
+    - composer stylelint -- --color --custom-formatter node_modules/stylelint-junit-formatter > junit-stylelint.xml || true
   allow_failure: true
   artifacts:
     expose_as: junit
     expire_in: 6 mos
     paths:
       - web/core/node_modules
-      #- web/core/junit-stylelint.xml
+      - web/core/junit-stylelint.xml
       - web/core/junit-eslint.xml
     reports:
-      junit: web/core/junit-eslint.xml
+#      junit: web/core/junit-eslint.xml
+      junit: web/core/junit-stylelint.xml
 
 # Run tests on Drupal 9 by default.
 composer:
