--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
       "si": "drush si -v --db-url=${SIMPLETEST_DB:-mysql://root:password@mariadb/db} testing",
-      "phpcs": "PWD=$(pwd) && phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/",
+      "phpcs": "phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 web/modules/custom",
       "lint": "parallel-lint --exclude web --exclude vendor .",
       "runserver": "drush runserver 0.0.0.0",
       "chromedriver": "chromedriver --port=9515 --verbose --whitelisted-ips --log-path=/tmp/chromedriver.log --no-sandbox",
