--- a/modules/webprofiler/composer.json
+++ b/modules/webprofiler/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=7.2.3",
-        "symfony/var-dumper": "^3.4 || ^4.0 || ^5.0",
+        "symfony/var-dumper": "^4 || ^5",
         "nikic/php-parser": "~4.0"
     },
     "extra": {
