--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,7 @@ composer_node:
     # https://getcomposer.org/doc/articles/versions.md#next-significant-release-operators
     DRUPAL_CORE_CONSTRAINT: ~9.0.0
 
-# Add /webprofiler to ignored paths.
 phpcs:
   script:
-    - PWD=$(pwd) && vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/,$PWD/webprofiler/ --report-junit=junit.xml --report-full --report-summary
+    - PWD=$(pwd) && vendor/bin/phpcs --runtime-set ignore_warnings_on_exit 1 --runtime-set ignore_errors_on_exit 1 --ignore=$PWD/web/,$PWD/vendor/ --report-junit=junit.xml --report-full --report-summary
 
