--- a/modules/webprofiler/webprofiler.info.yml
+++ b/modules/webprofiler/webprofiler.info.yml
@@ -1,6 +1,6 @@
 name: Webprofiler
 type: module
-description: 'Drupal Web Profiler.'
+description: 'Drupal Webprofiler.'
 package: Development
 core_version_requirement: ^8.8 || ^9
 php: 7.2
