Pretty complete blocks and request data collectors

--- a/modules/webprofiler/webprofiler.routing.yml
+++ b/modules/webprofiler/webprofiler.routing.yml
@@ -8,7 +8,7 @@ webprofiler.toolbar:
 webprofiler.dashboard:
   path: '/admin/reports/profiler/view/{token}'
   defaults:
-    _title: 'Dashboard'
+    _title: 'Webprofiler Dashboard'
     _controller: '\Drupal\webprofiler\Controller\DashboardController::dashboard'
   requirements:
     _permission: 'access webprofiler'
