--- a/modules/webprofiler/webprofiler.libraries.yml
+++ b/modules/webprofiler/webprofiler.libraries.yml
@@ -2,5 +2,8 @@ dashboard:
   version: VERSION
   js:
     js/dashboard.js: {}
+  css:
+    component:
+      css/dashboard.css: {}
   dependencies:
     - core/drupal.ajax
