Fix settings schema

--- a/modules/webprofiler/config/install/webprofiler.settings.yml
+++ b/modules/webprofiler/config/install/webprofiler.settings.yml
@@ -1,4 +1,2 @@
 exclude_paths: "/contextual/*\r\n/toolbar/*\r\n/edit/*\r\n*.js\r\n*.css"
-intercept_redirects: false
-only_exceptions: false
-only_master_requests: false
+intercept_redirects: true
